--- a/sysutils/open-vm-tools/Makefile
+++ b/sysutils/open-vm-tools/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.136 2024/12/27 08:20:40 wiz Exp $
+# $NetBSD: Makefile,v 1.137 2025/01/25 12:00:39 adam Exp $
 
-OVTVER=		12.4.5
-DISTNAME=	open-vm-tools-${OVTVER}-23787635
+OVTVER=		12.5.0
+DISTNAME=	open-vm-tools-${OVTVER}-24276846
 PKGNAME=	open-vm-tools-${OVTVER}
-PKGREVISION=	6
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=vmware/}
 GITHUB_RELEASE=	stable-${OVTVER}
