--- a/x11/kwindowsystem/Makefile
+++ b/x11/kwindowsystem/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.76 2025/01/13 00:11:34 wiz Exp $
+# $NetBSD: Makefile,v 1.77 2025/01/25 21:53:03 wiz Exp $
 
 DISTNAME=	kwindowsystem-${KF5VER}
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	x11
 
 HOMEPAGE=	https://community.kde.org/Frameworks
@@ -22,11 +22,11 @@ PLIST.mac=	yes
 .else
 PLIST.x11=	yes
 
-#SUBST_CLASSES+=		path
-#SUBST_SED.path+=	-e "s,${BUILDLINK_DIR}/include,${BUILDLINK_PREFIX.libX11}/include,"
-#SUBST_FILES.path+=	_KDE_build/CMakeFiles/Export/*/KF5WindowSystemTargets.cmake
-#SUBST_MESSAGE.path=	Fixing path to libX11 in installed file.
-#SUBST_STAGE.path=	post-build
+SUBST_CLASSES+=		path
+SUBST_SED.path+=	-e "s,${BUILDLINK_DIR}/include,${BUILDLINK_PREFIX.libX11}/include,"
+SUBST_FILES.path+=	_KDE_build/CMakeFiles/Export/*/KF5WindowSystemTargets.cmake
+SUBST_MESSAGE.path=	Fixing path to libX11 in installed file.
+SUBST_STAGE.path=	post-build
 
 .  include "../../x11/qt5-qtx11extras/buildlink3.mk"
 .endif
