--- a/devel/py-flufl.testing/Makefile
+++ b/devel/py-flufl.testing/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2025/01/22 08:11:24 adam Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/25 22:29:50 wiz Exp $
 
 DISTNAME=	flufl.testing-0.8
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -10,6 +10,7 @@ HOMEPAGE=	https://gitlab.com/warsaw/flufl.testing
 COMMENT=	Small collection of test tool plugins
 LICENSE=	apache-2.0
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
