--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1057 2025/01/24 11:54:54 wiz Exp $
+# $NetBSD: Makefile,v 1.1058 2025/01/26 00:54:38 ktnb Exp $
 #
 
 COMMENT=	Packages to support the X Window System
@@ -642,7 +642,6 @@ SUBDIR+=	xst
 SUBDIR+=	xstdcmap
 SUBDIR+=	xtar
 SUBDIR+=	xteddy
-SUBDIR+=	xteddy2
 SUBDIR+=	xterm
 SUBDIR+=	xtermcontrol
 SUBDIR+=	xtermset
