--- a/databases/p5-DBI/Makefile
+++ b/databases/p5-DBI/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.93 2025/01/12 09:54:06 wiz Exp $
+# $NetBSD: Makefile,v 1.94 2025/01/26 07:35:23 wiz Exp $
 
-DISTNAME=	DBI-1.646
+DISTNAME=	DBI-1.647
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../by-authors/id/H/HM/HMBRAND/}
+EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://dbi.perl.org/
