--- a/www/py-protego/Makefile
+++ b/www/py-protego/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:29:26 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/26 11:44:53 adam Exp $
 
-DISTNAME=	Protego-0.3.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
+DISTNAME=	protego-0.4.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/Protego/}
 
@@ -10,11 +10,11 @@ HOMEPAGE=	https://github.com/scrapy/protego
 COMMENT=	Pure-Python robots.txt parser with support for modern conventions
 LICENSE=	modified-bsd
 
+WHEEL_NAME=	${DISTNAME:S/p/P/}
+
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
