--- a/math/py-gmpy2/Makefile
+++ b/math/py-gmpy2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:28:40 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/26 16:13:20 he Exp $
 
 DISTNAME=	gmpy2-2.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/a/alpha/}
@@ -20,4 +20,5 @@ BUILDLINK_API_DEPENDS.mpcomplex?=	mpcomplex>=1.2.1
 .include "../../math/mpcomplex/buildlink3.mk"
 .include "../../math/mpfr/buildlink3.mk"
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
