--- a/www/py-jupyter_server/Makefile
+++ b/www/py-jupyter_server/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2024/10/14 06:46:07 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/27 10:49:32 adam Exp $
 
-DISTNAME=	jupyter_server-2.14.2
+DISTNAME=	jupyter_server-2.15.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=j/jupyter-server/}
@@ -14,11 +14,11 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-hatch-jupyter-builder>=0.8.1:../../devel/py-hatch-
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=1.11:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-Send2Trash>=1.8.2:../../sysutils/py-Send2Trash
 DEPENDS+=	${PYPKGPREFIX}-anyio>=3.1.0:../../devel/py-anyio
-DEPENDS+=	${PYPKGPREFIX}-argon2-cffi-[0-9]*:../../security/py-argon2-cffi
+DEPENDS+=	${PYPKGPREFIX}-argon2-cffi>=21.1:../../security/py-argon2-cffi
 DEPENDS+=	${PYPKGPREFIX}-jinja2>=3.0.3:../../textproc/py-jinja2
 DEPENDS+=	${PYPKGPREFIX}-jupyter_client>=7.4.4:../../devel/py-jupyter_client
 DEPENDS+=	${PYPKGPREFIX}-jupyter_core>=4.12:../../devel/py-jupyter_core
-DEPENDS+=	${PYPKGPREFIX}-jupyter_events>=0.9.0:../../devel/py-jupyter_events
+DEPENDS+=	${PYPKGPREFIX}-jupyter_events>=0.11.0:../../devel/py-jupyter_events
 DEPENDS+=	${PYPKGPREFIX}-jupyter_server_terminals>=0.4.4:../../comms/py-jupyter_server_terminals
 DEPENDS+=	${PYPKGPREFIX}-nbconvert>=6.4.4:../../www/py-nbconvert
 DEPENDS+=	${PYPKGPREFIX}-nbformat>=5.3.0:../../www/py-nbformat
