--- a/www/py-django-js-asset/Makefile
+++ b/www/py-django-js-asset/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2023/12/26 09:11:16 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/27 11:58:40 adam Exp $
 
-DISTNAME=	django_js_asset-2.2.0
+DISTNAME=	django_js_asset-3.0.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/django-js-asset/}
@@ -11,11 +11,11 @@ COMMENT=	Script tag with additional attributes for django.forms.Media
 LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
-DEPENDS+=	${PYPKGPREFIX}-django>=3.2:../../www/py-django3
+DEPENDS+=	${PYPKGPREFIX}-django>=4.2:../../www/py-django
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+PYTHON_VERSIONS_INCOMPATIBLE=	39
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
