--- a/www/py-django-registration/Makefile
+++ b/www/py-django-registration/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:29:19 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/27 12:03:16 adam Exp $
 
-DISTNAME=	django-registration-3.4
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	django_registration-5.1.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/django-registration/}
 
@@ -10,13 +10,11 @@ HOMEPAGE=	https://github.com/ubernostrum/django-registration
 COMMENT=	User-registration application for Django
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-pdm_backend-[0-9]*:../../devel/py-pdm_backend
 DEPENDS+=	${PYPKGPREFIX}-confusable_homoglyphs>=3.0:../../converters/py-confusable_homoglyphs
-DEPENDS+=	${PYPKGPREFIX}-django>=3.2:../../www/py-django
+DEPENDS+=	${PYPKGPREFIX}-django>=4.2:../../www/py-django
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
